# stocktopus

./: README.md  pyproject.toml  tox.ini
tasks/: convert_nasdaq_data.py
